Upload images to cloud storage and save listings to Firestore done

--- a/src/index.css
+++ b/src/index.css
@@ -728,7 +728,7 @@ button {
 
 @media (min-width: 1025px) {
     .listingForm {
-        background-color: #d9dadb59;
+        background-color: #edf0f3;
         border-radius: 1rem;
         padding: 2rem;
         width: 60vw;
