--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,7 @@ button {
 .explore {
     margin: 1rem 1rem 8rem;
 }
+
 @media (min-width: 1024px) {
     .pageContainer,
     .offers,
@@ -344,7 +345,19 @@ button {
 .swiperSlideDiv {
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 300px;
+}
+
+@media (min-width: 1024px) {
+    .swiperSlideDiv {
+        height: 500px;
+    }
+}
+
+@media (min-width: 1920px) {
+    .swiperSlideDiv {
+        height: 700px;
+    }
 }
 
 .swiperSlideImg {
